# polyjitter

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/polyjitter/: __init__.py  _exceptions.py  _triangulation.py  jitter.py
tests/: test_jitter.py  test_triangulation.py
